# comtypes

./: .bumpversion.cfg  .coveragerc  .gitignore  .hgtags  .readthedocs.yaml  .travis.yml  CHANGES.txt  CONTRIBUTING.md  ChangeLog  README  README.md  RELEASENOTES  RELEASENOTES.txt  TODO  appveyor.yml  clear_comtypes_cache.py  github_actions_requirements.txt  preview.bat  pyproject.toml  setup.cfg  setup.py  test_pip_install.py  udt.patch
.github/: FUNDING.yml
.github/workflows/: autofmt.yml  autotest.yml  main.yml
admin/: extract-comtypes-repo  run_tests_wine.sh  setup_tests_wine.sh  svndumpfilter2
ci/: runTestsuite.ps1
comtypes/: GUID.py  ___init__.py  __init__.py  _base.py  _bstr.py  _comobject.py  _idl_stuff.py  _memberspec.py  _meta.py  _npsupport.py  _py_instance_method.py  _safearray.py  _tlib_version_checker.py  _vtbl.py  automation.py  clear_cache.py  connectionpoints.py  custom.py  errorinfo.py  git.py  hints.pyi  hresult.py  logutil.py  malloc.py  messageloop.py  npsupport.py  numpysupport.py  objidl.py  partial.py  patcher.py  persist.py  propidl.py  safearray.py  shelllink.py  stream.py  typeinfo.py  typelib_loader.py  unknwn.py  util.py  viewobject.py
comtypes/_post_coinit/: __init__.py  _cominterface_meta_patcher.py  activeobj.py  bstr.py  instancemethod.py  misc.py  unknwn.py
comtypes/client/: __init__.py  _activeobj.py  _code_cache.py  _constants.py  _create.py  _events.py  _generate.py  _managing.py  _misc.py  dynamic.py  lazybind.py  misc.py
comtypes/server/: __init__.py  automation.py  connectionpoints.py  inprocserver.py  localserver.py  register.py  w_getopt.py
comtypes/test/: README.md  TestComServer.idl  TestComServer.py  TestComServer.tlb  TestDispServer.idl  TestDispServer.py  TestDispServer.tlb  TestServer.py  __init__.py  find_memleak.py  gdi_helper.py  monikers_helper.py  mylib.idl  mylib.tlb  runtests.py  setup.py  test_BSTR.py  test_DISPPARAMS.py  test_GUID.py  test_QueryService.py  test_agilent.py  test_avmc.py  test_basic.py  test_bctx.py  test_casesensitivity.py  test_classfactory.py  test_clear_cache.py  test_client.py  test_client_dynamic.py  test_client_regenerate_modules.py  test_collections.py  test_comobject.py  test_comserver.py  test_comserver_pywin32.py  test_connectionpoints.py  test_createwrappers.py  test_dict.py  test_dispifc_recordptr.py  test_dispifc_records.py  test_dispifc_safearrays.py  (+58 more)
comtypes/test/msvc/: __init__.py
comtypes/tests/: conftest.py  test_scrrun_dll.py
comtypes/tools/: codegenerator.py  codegenerator_base.py  tlbparser.py  typeannotator.py  typedesc.py  typedesc_base.py
comtypes/tools/codegenerator/: __init__.py  codegenerator.py  comments.py  generator.py  heads.py  helpers.py  modulenamer.py  namespaces.py  packing.py  typeannotator.py
custom location/comtypes/: connectionpoints.py  errorinfo.py  logutil.py  persist.py  shelllink.py  typeinfo.py
custom location/comtypes/client/: _events.py  _generate.py  dynamic.py
custom location/comtypes/server/: localserver.py
custom location/comtypes/test/: TestComServer.py  find_memleak.py  test_BSTR.py  test_GUID.py  test_agilent.py  test_basic.py  test_collections.py  test_dict.py  test_dispinterface.py  test_npsupport.py  test_outparam.py  test_propputref.py  test_safearray.py  test_server.py  test_typeinfo.py  test_variant.py  test_win32com_interop.py
custom location/comtypes/tools/: codegenerator.py  tlbparser.py  typedesc_base.py
docs/: Makefile  com_interfaces.html  com_interfaces.txt  comtypes.client.html  comtypes.client.txt  comtypes.css  comtypes.txt  conf.py  index.html  index.rst  index.txt  make.bat  requirements.txt  server.rst
docs/source/: client.rst  com_interfaces.rst  conf.py  index.rst  index_.rst  npsupport.rst  scriptcontrol.rst  server.rst  threading.rst
source/: AvmcIfc.cpp  AvmcIfc.def  AvmcIfc.dsp  AvmcIfc.idl  AvmcIfc.sln  AvmcIfc.tlb  AvmcIfc.vcxproj  AvmcIfcps.def  StdAfx.h
source/COMtypesTestServer/: COMtypesTestServer.cpp  COMtypesTestServer.def  COMtypesTestServer.idl  COMtypesTestServer.rc  COMtypesTestServer.rgs  COMtypesTestServer.sln  COMtypesTestServer.vcproj  COMtypesTestServerPS.vcproj  COMtypesTestServerps.def  ReadMe.txt  TestComServer.cpp  TestComServer.h  TestComServer.rgs  _ITestComServerEvents_CP.h  resource.h  stdafx.cpp
source/CppTestSrv/: CFACTORY.CPP  CFACTORY.H  CUNKNOWN.H  CoComtypesDispIfcParamTests.cpp  CoComtypesDispIfcParamTests.h  CoComtypesDispRecordParamTest.cpp  CoComtypesDispRecordParamTest.h  CoComtypesDispSafearrayParamTest.cpp  CoComtypesDispSafearrayParamTest.h  MAKEFILE  OUTPROC.CPP  REGISTRY.CPP  REGISTRY.H  SERVER.CPP  SERVER.IDL  UTIL.CPP  UTIL.H
source/OutProcSrv/: CMPNT.CPP  CMPNT.H  CUNKNOWN.CPP  MAKEFILE  REGISTRY.CPP  SERVER.CPP  SERVER.IDL
source/win64/: Avmc.cpp  Avmc.h  Avmc.rgs  AvmcIfc.dsw  AvmcIfc.rc  AvmcIfc.sln  AvmcIfc.tlb  AvmcIfc.vcproj  AvmcIfc.vcxproj.filters  StdAfx.h  build-dll.py  resource.h
web/: comtypes.css  ctypes.css  footer.rst  html4css1.css  index.rst  make.bat  make.py  myserver.py  mytypelib.idl  rst2html.py  rst_directive.py  scriptcontrol.rst  sf_logo  sitemeter  update.bat
