[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
# production
"comtypes/_comobject.py" = ["E713", "E722", "F401"]
"comtypes/_npsupport.py" = ["F401"]
"comtypes/_vtbl.py" = ["E713", "E722", "F401"]
"comtypes/connectionpoints.py" = ["F401", "F403", "F405"]
"comtypes/automation.py" = ["F401", "F403", "F405"]
"comtypes/errorinfo.py" = ["F403", "F405"]
"comtypes/git.py" = ["F401", "F403", "F405"]
"comtypes/logutil.py" = ["E401"]
"comtypes/shelllink.py" = ["F401"]
"comtypes/util.py" = ["F403", "F405"]
"comtypes/viewobject.py" = ["F403", "F405"]
"comtypes/_post_coinit/unknwn.py" = ["F821"]
"comtypes/client/__init__.py" = ["F401", "F403"]
"comtypes/client/_code_cache.py" = ["E401", "E711"]
"comtypes/client/_constants.py" = ["F401"]
"comtypes/client/_events.py" = ["F841"]
"comtypes/client/lazybind.py" = ["F821"]
"comtypes/server/__init__.py" = ["E401"]
"comtypes/server/automation.py" = ["F403", "F405"]
"comtypes/server/connectionpoints.py" = ["F401", "F403", "F405"]
"comtypes/server/inprocserver.py" = ["E713", "E722", "F403", "F405", "F841"]
"comtypes/server/localserver.py" = ["F401", "F403", "F405"]
"comtypes/server/register.py" = ["F403", "F405", "E713", "E731"]
"comtypes/tools/codegenerator/codegenerator.py" = ["E713", "E721"]
"comtypes/tools/codegenerator/helpers.py" = ["F401"]
"comtypes/tools/codegenerator/packing.py" = ["F821", "F841"]
"comtypes/tools/tlbparser.py" = ["F401"]
"comtypes/tools/typedesc.py" = ["F403", "F405"]
"comtypes/tools/typedesc_base.py" = ["F401"]
# tests
"comtypes/test/TestComServer.py" = ["E401", "F401", "F403", "F405"]
"comtypes/test/TestDispServer.py" = ["E401"]
"comtypes/test/find_memleak.py" = ["E401", "F401", "F403", "F405"]
"comtypes/test/setup.py" = ["F401"]
"comtypes/test/test_BSTR.py" = ["E401", "F401", "F403", "F405"]
"comtypes/test/test_agilent.py" = ["F401", "F841"]
"comtypes/test/test_client.py" = ["F401"]
"comtypes/test/test_dict.py" = ["F841"]
"comtypes/test/test_ie.py" = ["F403", "F405", "F841"]
"comtypes/test/test_outparam.py" = ["F403", "F405", "F841"]
"comtypes/test/test_sapi.py" = ["E401"]
"comtypes/test/test_server.py" = ["E401", "E722", "F401", "F841"]
"comtypes/test/test_subinterface.py" = ["E401", "F401", "F403", "F405"]
"comtypes/test/test_typeinfo.py" = ["F401"]
"comtypes/test/test_urlhistory.py" = ["E401", "F401", "F403", "F405", "F841"]
"comtypes/test/test_variant.py" = ["F401", "F821", "F841"]
