[metadata]
name = comtypes
description = Pure Python COM package
author = Thomas Heller
author_email = theller@python.net
url = https://github.com/enthought/comtypes
download_url = https://github.com/enthought/comtypes/releases
version = attr:comtypes.__version__
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 3
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7

packages =
	comtypes
	comtypes._post_coinit
	comtypes.client
	comtypes.server
	comtypes.tools
	comtypes.tools.codegenerator
	comtypes.test

[options.package_data]
comtypes.test =
	TestComServer.idl
	TestComServer.tlb
	TestDispServer.idl
	TestDispServer.tlb
	mytypelib.idl
	mylib.idl
	mylib.tlb
	urlhist.tlb
	test_jscript.js
comtypes =
	hints.pyi

[options.entry_points]
console_scripts =
	clear_comtypes_cache = comtypes.clear_cache:main
